Fix time overflow and clean code

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap');
 
-#time {
+#container {
     display: grid;
     text-align: center;
     align-items: center;
